--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/"
+            href="https://opensea.io/collection/coo-and-the-gang"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -154,7 +154,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://testnets.opensea.io/collection/coo-and-the-gang"
           target="_blank"
           rel="noopener noreferrer"
         >
