--- a/frontend/index.html
+++ b/frontend/index.html
@@ -163,7 +163,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container2">
       <div class="countdown card">
         <div id="countdown">
           <ul class="count-down" data-date="">
