--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"> 
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
+    <link rel="stylesheet" href="css/site.css" />
   </head>
   <body>
     <div class="section-background">
