--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,12 +11,15 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
     <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body class="is-preload">
-
+    <div class="section-background">
+      <img alt="" data-src="https://images.squarespace-cdn.com/content/v1/62ae0278f951920a263d4244/7f2bbc01-d695-4fae-9250-14a28a2867b1/CloudBG.jpg" data-image="https://images.squarespace-cdn.com/content/v1/62ae0278f951920a263d4244/7f2bbc01-d695-4fae-9250-14a28a2867b1/CloudBG.jpg" data-image-dimensions="4000x8000" data-image-focal-point="0.5,0.5" data-load="false" style="width: 100%; height: 100%; object-position: 50% 50%; object-fit: cover;" data-parent-ratio="0.1" class="" data-image-resolution="2500w" src="https://images.squarespace-cdn.com/content/v1/62ae0278f951920a263d4244/7f2bbc01-d695-4fae-9250-14a28a2867b1/CloudBG.jpg?format=2500w">
+          <div class="section-background-overlay" style="opacity: 0;"></div>
+      </div>
 		<!-- Wrapper -->
-			<div id="section-background">
-        <img style="width: 100%; height: 100%; object-position: 50% 50%; object-fit: cover;" src="images/CloudBG.jpg">
+			<div id="wrapper">
 				<!-- Header -->
 					<header id="header">
 						<h1><a href="index.html">Future Imperfect</a></h1>
