--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,9 @@
   </head>
   <body class="is-preload">
     <div class="section-background">
-      <img alt="" data-src="https://images.squarespace-cdn.com/content/v1/62ae0278f951920a263d4244/7f2bbc01-d695-4fae-9250-14a28a2867b1/CloudBG.jpg" data-image="https://images.squarespace-cdn.com/content/v1/62ae0278f951920a263d4244/7f2bbc01-d695-4fae-9250-14a28a2867b1/CloudBG.jpg" data-image-dimensions="4000x8000" data-image-focal-point="0.5,0.5" data-load="false" style="width: 100%; height: 100%; object-position: 50% 50%; object-fit: cover;" data-parent-ratio="0.1" class="" data-image-resolution="2500w" src="https://images.squarespace-cdn.com/content/v1/62ae0278f951920a263d4244/7f2bbc01-d695-4fae-9250-14a28a2867b1/CloudBG.jpg?format=2500w">
-          <div class="section-background-overlay" style="opacity: 0;"></div>
-      </div>
+      <img alt="" data-src="images/CloudBG.jpg" data-image="images/CloudBG.jpg" data-image-dimensions="4000x8000" data-image-focal-point="0.5,0.5" data-load="false" style="width: 100%; height: 100%; object-position: 50% 50%; object-fit: cover;" data-parent-ratio="0.1" class="" data-image-resolution="2500w" src="images/CloudBG.jpg?format=2500w">
+      <div class="section-background-overlay" style="opacity: 0;"></div>
+    </div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<!-- Header -->
