--- a/frontend/index.html
+++ b/frontend/index.html
@@ -229,9 +229,9 @@
               </header>
             </article>
             <!-- FACOOS -->
-            <figure style="max-width:500px;margin: 0 auto;">
+            <figure style="max-width:300px;margin: 0 auto;">
               <div class="image-block-wrapper" data-animation-role="image">
-                <div class="sqs-image-shape-container-element has-aspect-ratio" style="position: relative;overflow: hidden;">
+                <div class="sqs-image-shape-container-element has-aspect-ratio" style="position: relative;overflow: hidden;padding-bottom: 5%;">
                   <noscript><img src="images/FACOOS.png" alt="Coo and the Gang©" /></noscript><img class="thumb-image loaded" data-src="images/FACOOS.png" data-image="images/FACOOS.png" data-image-dimensions="684x685" data-image-focal-point="0.5,0.5" data-load="false" data-type="image" style="left: 0%; top: -0.0269687%; width: 100%; height: 100.054%;" alt="Coo and the Gang©" data-image-resolution="685w" src="images/FACOOS.png?format=685w">
                 </div>
               </div>
