--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,14 +177,14 @@
                   </figure>
                 </div>
                 <div class="meta" style="margin: 0;">
-                  <h3 style="text-align: left;">P-MONEY ⚡️⚡️⚡️⚡️⚡️</h3>
-                  <h4 style="text-align: left;">CREATIVE DIRECTOR, ARTIST, BIZ DEVELOPMENT</h4>
-                  <p style="text-align: left;">internationally published artist, product + graphic designer, marketer and entrepreneur.</p>
-                  <p style="text-align: left;">founder of 4x Web2 companies and 1x Web3 company. </p>
-                  <p style="text-align: left;">Sold 4+ million products worldwide.</p>
-                  <p style="text-align: left;">Past client HIGHLIGHTS include NIKE, shady aftermath, BAd boy records, Ye, DR OETKER, Sanrio, SPORTS DIRECT AND MORE. </p>
-                  <p style="text-align: left;">Passion for building brands and bringing products to market.</p>
-                  <p style="text-align: left;">web3 advocate, art and nft enthusiast. degen. </p>
+                  <h3 style="text-align: left; width: 100%;">BLOCKGAME ⚡️⚡️⚡️⚡️⚡️</h3>
+                  <h4 style="text-align: left; width: 100%;">CREATIVE DIRECTOR, ARTIST, BIZ DEVELOPMENT</h4>
+                  <p style="text-align: left; width: 100%;">internationally published artist, product + graphic designer, marketer and entrepreneur.</p>
+                  <p style="text-align: left; width: 100%;">founder of 4x Web2 companies and 1x Web3 company. </p>
+                  <p style="text-align: left; width: 100%;">Sold 4+ million products worldwide.</p>
+                  <p style="text-align: left; width: 100%;">Past client HIGHLIGHTS include NIKE, shady aftermath, BAd boy records, Ye, DR OETKER, Sanrio, SPORTS DIRECT AND MORE. </p>
+                  <p style="text-align: left; width: 100%;">Passion for building brands and bringing products to market.</p>
+                  <p style="text-align: left; width: 100%;">web3 advocate, art and nft enthusiast. degen. </p>
                 </div>
               </header>
             </article>
@@ -201,11 +201,11 @@
                   </figure>
                 </div>
                 <div class="meta" style="margin: 0;">
-                  <h3 style="text-align: left;">G-DOG ⭐️⭐️⭐️⭐️⭐️</h3>
-                  <h4 style="text-align: left;">DEVELOPER, TECH CONSULTANT</h4>
-                  <p style="text-align: left;">app builder, dev with 11+ years experience.</p>
-                  <p style="text-align: left;">Loves sci-fi, cars and bbq. Web3 obsessed.</p>
-                  <p style="text-align: left;">Past client HIGHLIGHTS include NIKE, SPORTS DIRECT.</p>
+                  <h3 style="text-align: left; width: 100%;">G-DOG ⭐️⭐️⭐️⭐️⭐️</h3>
+                  <h4 style="text-align: left; width: 100%;">DEVELOPER, TECH CONSULTANT</h4>
+                  <p style="text-align: left; width: 100%;">app builder, dev with 11+ years experience.</p>
+                  <p style="text-align: left; width: 100%;">Loves sci-fi, cars and bbq. Web3 obsessed.</p>
+                  <p style="text-align: left; width: 100%;">Past client HIGHLIGHTS include NIKE, SPORTS DIRECT.</p>
                 </div>
               </header>
             </article>
@@ -224,7 +224,7 @@
                 <div class="meta" style="margin: 0;">
                   <h3 style="text-align: left;">RAFF 🐦🐦🐦🐦🐦</h3>
                   <h4 style="text-align: left;">OPERATOR</h4>
-                  <p style="text-align: left;">Mad about the outdoors. Loves to touch grass.</p>
+                  <p style="text-align: left; width: 100%;">Mad about the outdoors. Loves to touch grass.</p>
                 </div>
               </header>
             </article>
@@ -236,48 +236,105 @@
                 </div>
               </div>
             </figure>
-            <button class="accordion">WHAT IS COO AND THE GANG</button>
-            <div class="panel">
-              <p>COO AND THE GANG© IS A PIONEERING NFT PROJECT POWERED BY A BLUECHIP TEAM. CREATING HIGH-QUALITY ARTWORK, ORIGINAL IP AND PLAYFUL BRAND MIXED WITH A FUN, UNPREDICTABLE DEGEN MENTALITY.</p>
-              <p>COO AND THE GANG GENESIS IS A FREE MINT OF 10,000 UNIQUE GENERATIVE NFT COLLECTIBLES, EACH HAND-DRAWN, WITH OVER 10 TRAITS AND 400 INDIVIDUAL ASSETS.</p>
-              <p>UP TO 2,000 WHITELIST, 7,000 PUBLIC MINT.</p>
-              <p>THE FOUNDING TEAM WILL KEEP 1,000 NFT’S FOR FRIENDS, FAM, PARTNERS AND MARKETING PURPOSES.</p>
-            </div>
 
-            <button class="accordion">WEN MINT? WEN REVEAL?</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
+            <div class="tabs">
+              <div class="tab">
+                <input type="checkbox" id="chck1">
+                <label class="tab-label" for="chck1">WHAT IS COO AND THE GANG</label>
+                <div class="tab-content">
+                  <p>COO AND THE GANG© IS A PIONEERING NFT PROJECT POWERED BY A BLUECHIP TEAM. CREATING HIGH-QUALITY ARTWORK, ORIGINAL IP AND PLAYFUL BRAND MIXED WITH A FUN, UNPREDICTABLE DEGEN MENTALITY.</p>
+                  <p>COO AND THE GANG GENESIS IS A FREE MINT OF 10,000 UNIQUE GENERATIVE NFT COLLECTIBLES, EACH HAND-DRAWN, WITH OVER 10 TRAITS AND 400 INDIVIDUAL ASSETS.</p>
+                  <p>UP TO 2,000 WHITELIST, 7,000 PUBLIC MINT.</p>
+                  <p>THE FOUNDING TEAM WILL KEEP 1,000 NFT’S FOR FRIENDS, FAM, PARTNERS AND MARKETING PURPOSES.</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck2">
+                <label class="tab-label" for="chck2">WEN MINT? WEN REVEAL?</label>
+                <div class="tab-content">
+                  <p>MINT DETAILS REVEALED SOON. CHECK BACK REGULARLY AND FOLLOW OUR OFFICIAL CHANNELS FOR OUR LATEST ANNOUNCEMENTS.</p>
+                  <p>REVEAL WILL BE ANNOUNCED IN THE WEEKS FOLLOWING MINT.</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck3">
+                <label class="tab-label" for="chck3">HOW DO I GET WHITELIST</label>
+                <div class="tab-content">
+                  <p>WE WILL BE RUNNING RAFFLES AND RANDOM CONTESTS ON OUR SOCIALS IN THE LEAD TO MINT.</p>
+                  <p>FOLLOW OUR OFFICIAL SOCIALS FOR DETAILS:</p>
+                  <p>WWW.TWITTER.COM/COOANDTHEGANG</p>
+                  <p>WWW.INSTAGRAM.COM/COOANDTHEGANG</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck4">
+                <label class="tab-label" for="chck4">WHY NO DISCORD</label>
+                <div class="tab-content">
+                  <p>HOW MANY TIMES HAVE YOU SEEN A VIBRANT DISCORD ‘COMMUNITY’ DISAPPEAR JUST DAYS AFTER A PROJECT REVEAL? </p>
+                  <p>TOO MANY FUCKING TIMES. THAT’S HOW MANY.</p>
+                  <p>WHAT’S MORE, THE PROCESS OF JUMPING THROUGH HOOPS AND GRINDING FOR A WHITELIST IS SHIT. IT FOSTERS FAKE INTERACTIONS AND SPAM POSTS, RARELY CREATING GENUINE COMMUNITIES. THIS IS WHY WE’VE STAYED AWAY FROM DISCORD.</p>
+                  <p>MORE IMPORTANTLY, AN ABSENCE OF DISCORD ALSO LIMITS OPPORTUNITIES FOR SCAMMERS.</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck5">
+                <label class="tab-label" for="chck5">WHY NO ROADMAP OR PROMISE OF UTILITY</label>
+                <div class="tab-content">
+                  <p>IF WE PROMISED TO MAKE YOU SOME CHEAP MERCH IN A YEAR’S TIME IS THAT VALUE-ADD UTILITY? </p>
+                  <p>UTILITY MORE OFTEN THAN NOT JUST ENDS UP AN INVITE TO A SOCIALLY-AWKWARD EVENT AT A BAR IN A CITY HALFWAY ACROSS THE WORLD YOU CAN’T GET TO.</p>
+                  <p>WE BELIEVE UNDER-PROMISING AND OVER DELIVERING IS BETTER AND ENCOURAGE YOU TO COLLECT OUR NFT’S BECAUSE THEY’RE FIRE 🔥</p>
+                  <p>WHO KNOWS, YOU MIGHT BE SURPRISED OR DELIGHTED?</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck6">
+                <label class="tab-label" for="chck6">WHO'S BEHIND THE PROJECT</label>
+                <div class="tab-content">
+                  <p>A COUPLE OF OLD SCHOOL FRIENDS PASSIONATE ABOUT ART, MUSIC, TECH AND WEB3  WHO HAPPEN TO BE EXPERIENCED IN BUILDING VALUABLE BRANDS AND BUSINESSES</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck7">
+                <label class="tab-label" for="chck7">DO I OWN THE RIGHTS TO MY NFT ARTWORK</label>
+                <div class="tab-content">
+                  <p>AGREEMENT:</p>
+                  <p>UPON RECEIVING OWNERSHIP OF A LICENSED ‘COO AND THE GANG’ NFT WE SHALL GRANT YOU A NON-EXCLUSIVE, WORLDWIDE, ROYALTY-FREE LICENSE TO: </p>
+                  <li>USE OR OTHERWISE LOVE THE ART OF YOUR LICENSED NFT FOR YOUR OWN PERSONAL USE;</li>
+                  <li>COMMERCIALISE YOUR LICENSED ‘COO AND THE GANG’ NFT BY PRODUCING AND SELLING PHYSICAL MERCHANDISE THAT PORTRAYS THE LICENSED NFT’S UNDERLYING ART IN ITS ENTIRETY;</li>
+                  <li>SELL OR TRANSFER YOUR LICENSED NFTS ON THIRD-PARTY NFT TRADING PLATFORMS;</li>
+                  <br>
+                  <p>YOU HAVE THE LIMITED RIGHT TO TRANSFER OR SELL YOUR LICENSED NFTS ON AN NFT TRADING PLATFORM SUCH AS OPENSEA, PROVIDED THAT THE BUYER UNDERSTANDS AND ACCEPTS THE TERMS OF THIS AGREEMENT PRIOR TO THE TRANSFER. </p>
+                  <p>IF YOU SELL YOUR LICENSED ‘COO AND THE GANG’ NFT THE LICENSE WILL BE TERMINATED WITH IMMEDIATE EFFECT AND YOU RELINQUISH ALL RIGHTS REGARDING THE NFT.</p>
+                  <p>WE ARE NOT RESPONSIBLE FOR ANY TRANSACTIONS BETWEEN YOU AND A THIRD PARTY, INCLUDING USING ANY NFT TRADING PLATFORM TO TRANSFER YOUR LICENSED ‘COO AND THE GANG’ NFTS.  </p>
+                  <p>WE SHALL HAVE NO RESPONSIBILITIES OR LIABILITY WITH RESPECT TO ANY TRANSFER YOU ENACT ON ANY THIRD-PARTY NFT TRADING PLATFORM.</p>
+                </div>
+              </div>
+              <div class="tab">
+                <input type="checkbox" id="chck8">
+                <label class="tab-label" for="chck8">TERMS AND CONDITIONS - MUST READ (BORING BUT IMPORTANT SH%!)</label>
+                <div class="tab-content">
+                  <h4 style="color: black;text-align: left;">USING THIS WEBSITE</h4>
+                  <p>BY USING, CONNECTING YOUR WALLET TO AND OTHERWISE INTERACTING WITH THIS WEBSITE, YOU ACCEPT THAT YOU ARE ENTERING INTO A CONTRACT WITH US UNDER THESE TERMS.  ALL USERS OR VISITORS OF OUR WEBSITE AND APP AGREE THAT THEIR ACCESS TO AND USE OF IT ARE SUBJECT TO THE TERMS AND CONDITIONS SET FORTH IN THIS LEGAL NOTICE AND TO ALL APPLICABLE LAWS, AND THAT ANY SUCH ACCESS OR USE IS UNDERTAKEN AT THE USER’S OWN RISK. </p>
+                  <p>THESE TERMS AND CONDITIONS MAY BE CHANGED AT ANY TIME WITHOUT PRIOR NOTICE TO YOU AND YOU ARE STRONGLY ADVISED TO CHECK THE CURRENT TERMS AND CONDITIONS EACH TIME YOU INTERACT WITH OUR WEBSITE.</p>
+                  <p>THIS WEBSITE IS OPERATED BY COO AND THE GANG.</p>
+                  <h4 style="color: black;text-align: left;">COPYRIGHT & IP</h4>
+                  <p>THE COPYRIGHT IN THIS WEBSITE BELONGS TO COO AND THE GANG AND WILL AT ALL TIMES REMAIN WITH US. YOU MAY ACCESS THIS WEBSITE FOR YOUR OWN NON COMMERCIAL USE ONLY. YOU MAY NOT COPY, PUBLISH, MODIFY, TRANSFER, CREATE DERIVATIVE WORKS FROM, COMMERCIALLY EXPLOIT OR OTHERWISE USE IN WHOLE OR PART ANY OF THE CONTENT ON THIS WEBSITE.</p>
+                  <p>YOU MAY NOT DELETE OR ALTER IN ANY WAY ANY COPYRIGHT, TRADE MARK, INTELLECTUAL PROPERTY OR OTHER LEGAL NOTICES FROM ANY PART OF THIS WEBSITE.</p>
+                  <h4 style="color: black;text-align: left;">SECURITY & PRIVACY</h4>
+                  <p>AT COO AND THE GANG, WE TAKE CARE TO PROTECT YOUR PRIVACY AND SECURE YOUR INFORMATION.</p>
+                  <p>YOU AGREE TO ACCEPT RESPONSIBILITY FOR ALL ACTIVITIES THAT OCCUR UNDER YOUR WALLET, ACCOUNT OR PASSWORD. YOU SHOULD TAKE ALL NECESSARY STEPS TO ENSURE THAT THE PASSWORD OR SEED PHRASE IS KEPT CONFIDENTIAL AND SECURE.</p>
+                  <p>COO AND THE GANG, RESERVES THE RIGHT TO REFUSE ACCESS TO THE WEBSITE OR APP, TERMINATE ACCOUNTS, REMOVE OR EDIT CONTENT.</p>
+                  <p>WE WILL DO OUR UTMOST TO ENSURE THAT AVAILABILITY OF THE WEBSITE WILL BE UNINTERRUPTED AND THAT TRANSMISSIONS WILL BE ERROR-FREE. HOWEVER, DUE TO THE NATURE OF THE INTERNET, THIS CANNOT BE GUARANTEED. ALSO, YOUR ACCESS TO THE WEBSITE MAY ALSO BE OCCASIONALLY SUSPENDED OR RESTRICTED TO ALLOW FOR REPAIRS, MAINTENANCE, OR THE INTRODUCTION OF NEW FACILITIES OR SERVICES. WE WILL ATTEMPT TO LIMIT THE FREQUENCY AND DURATION OF ANY SUCH SUSPENSION OR RESTRICTION.</p>
+                  <p>YOU AGREE AND UNDERSTAND THAT THE LICENSED ‘COO AND THE GANG’ NFTS ARE MADE FOR ENTERTAINMENT PURPOSES ONLY. YOU AGREE AND UNDERSTAND THAT: </p>
+                  <li>THE NFT MARKET AND PRICES ARE EXTREMELY VOLATILE, AND FLUCTUATIONS IN THE PRICE OF BLOCKCHAIN ASSETS OR CRYPTO CURRENCY COULD ADVERSELY AFFECT THE PRICE OF YOUR LICENSED ‘COO AND THE GANG’ NFT. YOUR LICENSED ‘COO AND THE GANG’ NFT HAS NO INHERENT OR INTRINSIC VALUE;</li>
+                  <li>YOU TAKE ACCEPT ALL RESPONSIBILITY AND RISKS RELATING TO TAXATION, LOSS OF CRYPTO OR BLOCKCHAIN ASSETS THROUGH MALICOUS SOFTWARE, SCAMS, PHIHINGS OR HUMAN ERROR.</li>
+                  <li>YOU AGREE THAT ANY PARTICIPATION IN NFTS, BLOCKCHAIN OR CRYPTO CURRENCY IS SOLELY BASED ON YOUR OWN FREE DECISION AND NO CONTENT ON OUR WEBSITE OR SOCIAL MEDIA SHOULD BE DEEMED AS FINANCIAL ADVISE OR OTHERWISE.</li>
+                  <h4 style="color: black;text-align: left;">LIMITATION OF LIABILITY</h4>
+                  <p>ALL LICENSED NFTS ARE PROVIDED “AS IS” AND “AS AVAILABLE” WITHOUT WARRANTIES OF ANY KIND EITHER EXPRESS OR IMPLIED. </p>
+                </div>
+              </div>
             </div>
-
-            <button class="accordion">HOW DO I GET WHITELIST</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
-            </div>
-
-            <button class="accordion">WHY NO DISCORD</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
-            </div>
-
-            <button class="accordion">WHY NO ROADMAP OR PROMISE OF UTILITY</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
-            </div>
-
-            <button class="accordion">WHO'S BEHIND THE PROJECT</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
-            </div>
-
-            <button class="accordion">DO I OWN THE RIGHTS TO MY NFT ARTWORK</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
-            </div>
-
-            <button class="accordion">TERMS AND CONDITIONS - MUST READ (BORING BUT IMPORTANT SH%!)</button>
-            <div class="panel">
-              <p>Lorem ipsum...</p>
-            </div>
+          </div>
 
             <h2 style="padding-top: 10%;">🐦 #STAYCOO</h2>
             <!-- Get In Touch -->
@@ -286,9 +343,9 @@
             </h2>
             <!-- Instagram / Twitter -->
             <h2 style="text-align: left;padding-top: 20%;">
-              <a href="https://www.instagram.com/squarespace/" target="_blank">Instagram</a>
+              <a href="http://Instagram.com/cooandthegang" target="_blank">Instagram</a>
               /
-              <a href="https://twitter.com/squarespace" target="_blank">Twitter</a>
+              <a href="http://www.twitter.com/cooandthegang" target="_blank">Twitter</a>
             </h2>
           </div>
           <!-- Footer -->
@@ -312,9 +369,11 @@
           acc[i].addEventListener("click", function() {
             this.classList.toggle("active");
             var panel = this.nextElementSibling;
-            if (panel.style.maxHeight) {
-              panel.style.maxHeight = null;
-            } else {
+            if (panel.cl.display == none) {
+              panel.c.display = null;
+            } 
+            else 
+            {
               panel.style.maxHeight = panel.scrollHeight + "px";
             }
           });
