--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="container">
-        <button class="wallet-btn btn" id="connectWallet">
+        <button class="wallet-btn btn" id="connectButton">
           CONNECT WALLET
         </button>
       </div>
