--- a/frontend/index.html
+++ b/frontend/index.html
@@ -369,7 +369,7 @@
 			<script src="js/breakpoints.min.js"></script>
 			<script src="js/util.js"></script>
 			<script src="js/main.js"></script>
-      <script src="js/wallet.js"></script>
+      <script type="module" src="js/wallet.js"></script>
       <script>
         var acc = document.getElementsByClassName("accordion");
         var i;
