--- a/frontend/index.html
+++ b/frontend/index.html
@@ -369,6 +369,7 @@
 			<script src="js/main.js"></script>
       <script src="js/wallet.js"></script>
       <script src="js/web3.min.js"></script>
+      <script src="js/metamask-onboarding.bundle.js"></script>
       <script>
         var acc = document.getElementsByClassName("accordion");
         var i;
