--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="container">
-        <button class="wallet-btn btn" id="connectButton" value="CONNECT WALLET" onclick="Connect()">
+        <button class="wallet-btn btn" id="connectButton" value="CONNECT WALLET" onclick="onClickConnect()">
       </div>
     </header>
     <!-- Background -->
