--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,8 @@
     <header>
       <div class="container">
         <button class="wallet-btn btn" id="connectButton" value="CONNECT WALLET" onclick="Connect()">
+          <span id="walletText">CONNECT WALLET</span>
+        </button>
       </div>
     </header>
     <!-- Background -->
