--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,9 +18,7 @@
   <body>
     <header>
       <div class="container">
-        <button class="wallet-btn btn" id="connectButton" value="CONNECT WALLET" onclick="Connect()">
-          <span id="walletText">CONNECT WALLET</span>
-        </button>
+        <button class="wallet-btn btn" id="connectButton" onclick="Connect()"></button>
       </div>
     </header>
     <!-- Background -->
