--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,6 +76,14 @@
               <p id="mainText">
                 A new batch of coo and the gang will be available very soon!
               </p>
+              <a
+                id="actionButton"
+                href="https://discord.gg/A9CnsVzzkZ"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="hero-btn btn"
+                ><span>Join the Community</span>
+              </a>
               <div id="mintContainer" class="mint-container hidden">
                 <div class="info-container">
                   <div>
