--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,7 +78,7 @@
               </p>
               <a
                 id="actionButton"
-                href="https://discord.gg/A9CnsVzzkZ"
+                href="https://discord.gg/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="hero-btn btn"
