--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="total-price-container">
                   <h3>Total</h3>
-                  <p id="totalPrice">FREE</p>
+                  <p id="totalPrice">FREE (+ gas fee's)</p>
                 </div>
                 <button id="mintButton" class="hero-btn btn mint-btn">Mint</button>
               </div>
