--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
             <!-- Coming Soon -->
             <figure style="max-width:750px;margin: 0 auto;">
               <div class="image-block-wrapper" data-animation-role="image">
-                <div class="sqs-image-shape-container-element has-aspect-ratio" style="position: relative;padding-bottom:10.9611587524414%;overflow: hidden;">
+                <div class="sqs-image-shape-container-element has-aspect-ratio" style="position: relative;padding-bottom:10.9611587524414%;padding-top:5%;overflow: hidden;">
                   <noscript><img src="images/Coming-Soon.gif" alt="Coming Soon" /></noscript><img class="thumb-image loaded" data-src="images/Coming-Soon.gif" data-image="images/Coming-Soon.gif" data-image-dimensions="750x523" data-image-focal-point="0.5,0.5" data-load="false" data-type="image" style="left: 0%; top: -0.0269687%; width: 100%; height: 100.054%;" alt="Coming Soon" data-image-resolution="750w" src="images/Coming-Soon.gif?format=750w">
                 </div>
               </div>
