--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
 					<div id="main" style="width:66.6667%;">
             <!-- Coo and the Gang -->
             <figure style="max-width:750px;margin: 0 auto;">
-              <div class="image-block-wrapper" data-animation-role="image" id="yui_3_17_2_1_1655919821387_321">
+              <div class="image-block-wrapper" data-animation-role="image">
                 <div class="sqs-image-shape-container-element has-aspect-ratio" style="position: relative;padding-bottom:10.9611587524414%;overflow: hidden;">
                   <noscript><img src="images/CooandthegangLogo.png" alt="Coo and the Gang©" /></noscript><img class="thumb-image loaded" data-src="images/CooandthegangLogo.png" data-image="images/CooandthegangLogo.png" data-image-dimensions="1236x840" data-image-focal-point="0.5,0.5" data-load="false" data-type="image" style="width: 100%; height: 100.054%;" alt="Coo and the Gang©" data-image-resolution="750w" src="images/CooandthegangLogo.png?format=750w">
                 </div>
@@ -441,6 +441,6 @@
             }
           });
         }
-        </script>
+      </script>
 	</body>
 </html>
